<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fragment_back"
        tools:context=".view.timer.CountdownFragment">

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/ibm_plex_mono_regular"
            android:text="@string/countdownString"
            android:textColor="@color/enigmaColor"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="33sp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="74dp"
            android:layout_marginEnd="22dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text">

            <TextView
                android:id="@+id/days"
                style="@style/countdown"
                android:layout_weight="1"
                android:background="@color/countdownBackground"
                android:fontFamily="@font/ibm_plex_mono_regular"
                android:gravity="center_horizontal"
                android:text="@string/_00"
                app:lineHeight="49sp" />

            <TextView
                style="@style/semicolon"
                android:layout_weight="1"
                android:fontFamily="@font/ibm_plex_mono_regular"
                android:gravity="center_horizontal"
                android:text="@string/semicolon"
                app:lineHeight="45sp" />

            <TextView
                android:id="@+id/hours"
                style="@style/countdown"
                android:layout_weight="1"
                android:background="@color/countdownBackground"
                android:fontFamily="@font/ibm_plex_mono_regular"
                android:gravity="center_horizontal"
                android:text="@string/_00"
                app:lineHeight="49sp" />

            <TextView
                style="@style/semicolon"
                android:layout_weight="1"
                android:fontFamily="@font/ibm_plex_mono_regular"
                android:gravity="center_horizontal"
                android:text="@string/semicolon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="45sp" />

            <TextView
                android:id="@+id/minutes"
                style="@style/countdown"
                android:layout_weight="1"
                android:background="@color/countdownBackground"
                android:fontFamily="@font/ibm_plex_mono_regular"
                android:gravity="center_horizontal"
                android:text="@string/_00"
                app:lineHeight="49sp" />

            <TextView
                android:id="@+id/textView10"
                style="@style/semicolon"
                android:layout_weight="1"
                android:fontFamily="@font/ibm_plex_mono_regular"
                android:gravity="center_horizontal"
                android:text="@string/semicolon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="45sp" />

            <TextView
                android:id="@+id/seconds"
                style="@style/countdown"
                android:layout_weight="1"
                android:background="@color/countdownBackground"
                android:fontFamily="@font/ibm_plex_mono_regular"
                android:gravity="center_horizontal"
                android:text="@string/_00"
                app:lineHeight="49sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ibm_plex_mono_regular"
            android:text="@string/hrs"
            android:textColor="@color/timerTextColor"
            android:textSize="21sp"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ibm_plex_mono_regular"
            android:text="@string/days"
            android:textColor="@color/timerTextColor"
            android:textSize="21sp"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ibm_plex_mono_regular"
            android:text="@string/min"
            android:textColor="@color/timerTextColor"
            android:textSize="21sp"
            app:layout_constraintEnd_toStartOf="@+id/textView12"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/ibm_plex_mono_regular"
            android:text="@string/sec"
            android:textColor="@color/timerTextColor"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/startButton"
            style="@style/primaryButtonStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="71dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/next_button_background"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ibm_plex_mono_regular"
            android:gravity="center_horizontal"
            android:paddingStart="63dp"
            android:paddingTop="6dp"
            android:paddingEnd="63dp"
            android:paddingBottom="6dp"
            android:text="@string/start"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:visibility="invisible"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:strokeColor="@color/enigmaColor" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>